<resources>
    <string name="app_name">Singularity Scouting</string>
    <!-- <string name="app_version">2.0</string> -->

    <string name="title_activity_game">GameActivity</string>
    <string name="gear_dropped">Gear Dropped</string>
    <string name="fail">Failed</string>
    <string name="sucess">Sucess</string>
    <string name="gear_scored">Gear Scored</string>
    <string name="pickup_failed">Pickup Failed</string>
    <string name="dropped">Dropped</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="start_climb">Climb Attempted</string>
    <string name="cancel_climb">Cancel Climb</string>
    <string name="finish_climb">Beacon Lit</string>
    <string name="fail_climb">Fall/Jam/Failure</string>
    <string name="climb_failed">Climb Failed</string>
    <string name="climb_complete">Climb Success</string>
    <string name="climb_not_in_time">Not finished in time</string>
    <string name="default_end_game">End Game</string>
    <string name="increment_symbol">+</string>
    <string name="decrement_symbol">-</string>
    <string name="undo_symbol">⟲</string>
    <string name="redo_symbol">⟳</string>
    <string name="boiler_side">Boiler Side</string>
    <string name="center_peg">Center</string>
    <string name="gear_slot_side">Gear Slot Side</string>

    <string name="auton_gear_attempted">Gear Attempted</string>
    <string name="auton_gear_success">Gear Scored</string>

    <string name="Instructions">\tWhen you press the start match button you will be presented with the
        screen you will use while in teleop. Do not record scores in Autonomous mode.\n\n\tFor every gear
        that the robot receives, either from the gear slot or off the ground, press the green button
        in the \"Pickup\" row. For every gear failed to be collected, press the red button in the \"Pickup\"
        row.\n\n\tFor every gear scored, press the green button in the \"Scored\" row. For every gear that
        is dropped off of the peg, press the red button in the \"Scored\" row.\n\n\tIf a gear is dropped at
        another time, press the grey \"Gear Dropped\" button.\n\n\tWhen a robot shoots at a low or high goal
        increment each respectivly with the top button, green for scored, red for missed. The bottom buttons
        will decrement.\n\n\tWhen the match end whistle sounds, press the end match button, this is time
        sensitive. It will then copy data to your clipboard, you must paste this into the
        \"Data from teleop app\" text box under the \"Midgame\" tab in Memento.</string>
    <string name="dialogEndGame">Tap one more time to end game</string>
    <string name="review_screen_text">Match complete. Please paste data into Memento Database.</string>
    <string name="copy_data">Copy To Clipboard Again</string>
    <string name="new_match">New Match</string>
    <string name="start_match">Start Match</string>
    <string name="instructions">Instructions</string>
</resources>