<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_review"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="salinesingularity.singularitytimingapplication.ReviewActivity">

    <TextView
        android:text="@string/review_screen_text"
        android:layout_width="@dimen/review_text_width"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/copy_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCopyDataAgain"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onCopyToClipboard" />

    <Button
        android:text="@string/new_match"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_above="@+id/btnCopyDataAgain"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="13dp"
        android:elevation="0dp"
        android:onClick="onNewMatch" />

</RelativeLayout>
