<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="salinesingularity.singularitytimingapplication.GameActivity"
    android:layout_marginBottom="@dimen/small_vert_padding">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:paddingBottom="0dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:text="TIMER"
                android:layout_width="match_parent"
                android:id="@+id/txtCountDownTimer"
                android:textAlignment="center"
                android:textSize="50sp"
                android:layout_height="65dp" />

            <TextView
                android:text="Autonomous Mode:"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtAuton"
                android:textSize="30sp"
                android:layout_marginTop="10dp" />

            <TextView
                android:text="Start Position:"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:textSize="20sp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <RadioButton
                        android:text="Boiler Side"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rdoBoiler"
                        android:layout_weight="1" />

                    <RadioButton
                        android:text="Center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rdoCenter"
                        android:layout_weight="1" />

                    <RadioButton
                        android:text="Gear Slot Side"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rdoSlot"
                        android:layout_weight="1" />
                </RadioGroup>

                <CheckBox
                    android:text="Crossed Baseline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/baselineCheckbox"
                    android:layout_weight="1"
                    android:checked="false" />

                <Button
                    android:text="@string/auton_gear_attempted"
                    android:layout_width="wrap_content"
                    android:id="@+id/btnAutonGear"
                    android:layout_weight="1"
                    android:onClick="onAutonGearButtonClick"
                    android:layout_height="90dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="75dp">

                <TextView
                    android:text="Low Goal"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView11"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/decrement_symbol"
                    android:layout_width="wrap_content"
                    android:id="@+id/btnAutonLowGoalDown"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:onClick="onAutonLowGoalDec"
                    android:backgroundTint="@color/btnRed" />

                <TextView
                    android:text="0"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvAutonLowGoal"
                    android:layout_weight="1"
                    android:gravity="center" />

                <Button
                    android:text="@string/increment_symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/btnAutonLowGoalUp"
                    android:layout_weight="1"
                    android:onClick="onAutonLowGoal"
                    android:backgroundTint="@color/btnGreen" />

                <Space
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_width="40dp" />

                <TextView
                    android:text="High Goal"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView9"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/decrement_symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/btnAutonHighGoalDown"
                    android:layout_weight="1"
                    android:onClick="onAutonHighGoalDec"
                    android:backgroundTint="@color/btnRed" />

                <TextView
                    android:text="0"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvAutonHighGoal"
                    android:layout_weight="1"
                    android:layout_width="50dp"
                    android:gravity="center" />

                <Button
                    android:text="@string/increment_symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/btnAutonHighGoalUp"
                    android:layout_weight="1"
                    android:onClick="onAutonHighGoal"
                    android:backgroundTint="@color/btnGreen" />
            </LinearLayout>

            <TextView
                android:text="Teleop Mode:"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtTeleop"
                android:textSize="30sp"
                android:layout_marginTop="20dp" />

            <TextView
                android:text="Gears"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textSize="20sp"
                android:textColor="?android:attr/textColorSecondary" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:paddingBottom="10dp"
                android:layout_height="80dp">

                <Button
                    android:text="@string/gear_scored"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/btnGreen"
                    android:onClick="onScoredS"
                    android:id="@+id/btnScoreS" />

                <Button
                    android:text="@string/gear_dropped"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/btnDropped"
                    android:layout_weight="1"
                    android:onClick="onDropped"
                    android:backgroundTint="@color/btnRed" />

                <Button
                    android:text="@string/pickup_failed"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/btnPickupF"
                    android:layout_weight="1"
                    android:onClick="onPickupF" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/vert_padding">

                <TextView
                    android:text="0"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/tvGearScoreCount"
                    android:layout_weight="0.44"
                    android:gravity="center" />

                <TextView
                    android:text="0"
                    android:layout_height="match_parent"
                    android:id="@+id/tvDropCount"
                    android:layout_weight="0.44"
                    android:gravity="center"
                    android:layout_width="wrap_content" />

                <TextView
                    android:text="0"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/tvPickupFailCount"
                    android:layout_weight="0.44"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:paddingBottom="10dp">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6" />

                <Button
                    android:text="@string/undo_symbol"
                    android:layout_width="@dimen/undo_redo_width"
                    android:layout_height="match_parent"
                    android:id="@+id/btnUndo"
                    android:layout_weight="1"
                    android:onClick="onUndo"
                    android:hapticFeedbackEnabled="true"
                    android:textSize="22sp" />

                <Button
                    android:text="@string/redo_symbol"
                    android:layout_width="@dimen/undo_redo_width"
                    android:layout_height="match_parent"
                    android:id="@+id/btnRedo"
                    android:layout_weight="1"
                    android:onClick="onRedo"
                    android:hapticFeedbackEnabled="true"
                    android:textSize="22sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="@android:drawable/divider_horizontal_bright"
                android:layout_marginBottom="@dimen/small_vert_padding"
                android:id="@+id/divider1" />

            <TextView
                android:text="Fuel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:textSize="20sp"
                android:textColor="?android:attr/textColorSecondary" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="75dp">

                <TextView
                    android:text="Low Goal"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvLowGoal"
                    android:layout_width="70dp" />

                <Button
                    android:text="@string/decrement_symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/btnLowGoalSDec"
                    android:layout_weight="1"
                    android:backgroundTint="@color/btnRed"
                    android:onClick="onLowGoalSDec" />

                <TextView
                    android:layout_height="wrap_content"
                    android:id="@+id/tvLowGoalCount"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="0"
                    android:layout_width="50dp" />

                <Button
                    android:text="@string/increment_symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/btnLowGoalS"
                    android:layout_weight="1"
                    android:backgroundTint="@color/btnGreen"
                    android:onClick="onLowGoalS" />

                <Space
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_width="40dp" />

                <TextView
                    android:text="High Goal"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvHighGoal"
                    android:layout_width="70dp" />

                <Button
                    android:text="@string/decrement_symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/btnHighGoalSDec"
                    android:layout_weight="1"
                    android:backgroundTint="@color/btnRed"
                    android:onClick="onHighGoalSDec" />

                <TextView
                    android:text="0"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvHighGoalCount"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="50dp" />

                <Button
                    android:text="@string/increment_symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/btnHighGoalS"
                    android:layout_weight="1"
                    android:backgroundTint="@color/btnGreen"
                    android:onClick="onHighGoalS" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/small_vert_padding">

                <TextView
                    android:text=""
                    android:layout_width="@dimen/lowHighGoalTvWidth"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvLowGoalFiller" />

                <Space
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_width="40dp" />

                <TextView
                    android:layout_width="@dimen/lowHighGoalTvWidth"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvHighGoalDec" />

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="@android:drawable/divider_horizontal_bright"
                android:layout_marginBottom="@dimen/small_vert_padding"
                android:id="@+id/divider2" />

            <TextView
                android:text="Climb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtClimb"
                android:textSize="20sp"
                android:textColor="?android:attr/textColorSecondary" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:id="@+id/climbContainer"
                android:layout_height="70dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/btnClimbStart"
                    android:layout_weight="1"
                    android:text="@string/start_climb"
                    android:onClick="onStartClimb" />

            </LinearLayout>

            <Button
                android:text="@string/default_end_game"
                android:layout_width="match_parent"
                android:id="@+id/btnEndGame"
                android:layout_marginTop="20dp"
                android:backgroundTint="#EDDBFF"
                android:onClick="onEndGame"
                android:layout_height="65dp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
